tests/parse-errors/types/tagged_union_named_variant.cx
enum union Result {
    ok :: int value
};

int main() {
    return 0;
}
